package obstacle;

public class Treadmill extends Obstacle{
    public Treadmill(float length) {
        super(0, length);
    }
}
