package obstacle;

public class Wall extends Obstacle{
    public Wall(float height) {
        super(height, 0);
    }
}
