package participants.inorganic;

import participants.Participants;

public class Inorganic extends Participants{
    public Inorganic(String name, float maxRunOfParticipants, float maxJumpOfParticipants) {
        super(name, maxRunOfParticipants, maxJumpOfParticipants);
    }
}
