package participants.organic;

import participants.Participants;

public class Organic extends Participants {
    public Organic(String name, float maxRunOfParticipants, float maxJumpOfParticipants) {
        super(name, maxRunOfParticipants, maxJumpOfParticipants);
    }
}
