package prev;

public interface Behavior {
    boolean run(float lengthOfTreadmill);

    boolean jump(float heightOfWall);
}
